# ds-common-logger-py-lib

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PyPI.md  README.md  pyproject.toml  setup-template.sh
.config/: black.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  release.yaml  tests.yaml
docs/source/: conf.py  index.rst
examples/: 01_single_function.py  02_logger_isolation.py  02_multi_class.py  03_log_levels.py  03_logger_isolation.py  04_module_logging.py  04_real_world_scenario.py  05_application_config.py  05_log_levels.py  06_module_logging.py  06_multi_service_app.py  07_handler_management.py  07_inheritance.py  08_application_config.py  09_multi_service_app.py  10_handler_management.py  helpers.py
src/ds_common_logger_py_lib/: __init__.py  config.py  core.py  formatter.py  mixin.py
tests/: test_core.py  test_formatter.py  test_logger_config.py  test_mixin.py  test_version.py
